# venturalitica-scenario-huderia-cobra-public-sector

./: README.md  main.py  pyproject.toml
.venturalitica/: huderia_assessment.json  results.json
policies/: huderia-cobra-design.oscal.yaml  huderia-cobra-prerelease.oscal.yaml
venturalitica_scenario_huderia_cobra_public_sector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
