[project]
name = "venturalitica-scenario-huderia-cobra-public-sector"
version = "0.1.0"
description = "HUDERIA COBRA fundamental rights impact assessment on public sector AI systems (ACSPublicCoverage demo)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "venturalitica>=0.5.3",
    "folktables>=0.0.12",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
